fix datatable alignment and clipping issues

--- a/assets/10datatable.css
+++ b/assets/10datatable.css
@@ -2,3 +2,7 @@
     display: block !important;
     margin-bottom: 3rem !important;
 }
+.dash-table-container .row {
+    display: block;
+    margin: 0;
+}
